# easyDAG

./: README.md  __init__.py  easyDAG.py  example.py  main.py  pyproject.toml
.github/workflows/: publish.yml
EasyDAG/: __init__.py  core.py  messages.py  node.py
examples/full web demo/: dag.py  interface.py  server.py
src/EasyDAG/: __init__.py  core.py  interface.py  messages.py  node.py  queue.py
src/EasyDAGWeb/: __init__.py  ws.py
