[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "easydag"
version = "0.1.18"
description = "A lightweight multiprocessing DAG execution engine with message queues."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    {name = "Mechatronicist"}
]

license = {file = "LICENSE"}
keywords = ["dag", "multiprocessing", "workflow", "parallel", "tasks"]

dependencies = [
    # None
]

[project.urls]
Homepage = "https://github.com/mechatronicist/EasyDAG"
Repository = "https://github.com/mechatronicist/EasyDAG"
Issues = "https://github.com/mechatronicist/EasyDAG/issues"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".venv",
  ".git",
  ".github",
  "__pycache__",
  "*.pyc",
  ".pytest_cache",
  ".vscode",
  "*.egg-info",
]

[tool.hatch.build.targets.wheel]
packages = ["EasyDAG"]
